--- a/.github/workflows/fonts.yaml
+++ b/.github/workflows/fonts.yaml
@@ -37,13 +37,15 @@ jobs:
           wget -nv https://github.com/adobe-fonts/source-han-serif/raw/release/SubsetOTF/CN/${FONT_NAME}.otf
           pyftsubset ${FONT_NAME}.otf --text-file=fonts/chars.txt --no-hinting --flavor=woff2 --output-file=fonts/${FONT_NAME}-cxy.woff2
           export FONT_NAME=FandolKai-Regular
-          # wget -nv https://mirrors.ctan.org/fonts/fandol/${FONT_NAME}.otf
           wget -nv https://mirrors.tuna.tsinghua.edu.cn/CTAN/fonts/fandol/${FONT_NAME}.otf
           pyftsubset ${FONT_NAME}.otf --text-file=fonts/chars.txt --no-hinting --flavor=woff2 --output-file=fonts/${FONT_NAME}-cxy.woff2
           export FONT_NAME=AR-PL-KaitiM-GB
           wget -nv https://db.onlinewebfonts.com/t/157c7e79f7f057bbeacf5f113b964875.woff2 -O ${FONT_NAME}.woff2
           pyftsubset ${FONT_NAME}.woff2 --text-file=fonts/chars.txt --no-hinting --flavor=woff2 --output-file=fonts/${FONT_NAME}-cxy.woff2
-
+          export FONT_NAME=AR-PL-KaitiM-Big5
+          wget -nv https://raw.githubusercontent.com/chuxinyuan/ARPL/main/${FONT_NAME}.ttf -O ${FONT_NAME}.ttf
+          pyftsubset ${FONT_NAME}.ttf --text-file=fonts/chars.txt --no-hinting --flavor=woff2 --output-file=fonts/${FONT_NAME}-cxy.woff2
+          
       - name: Push fonts
         run: |
           git config user.name github-actions
