--- a/.github/workflows/fonts.yaml
+++ b/.github/workflows/fonts.yaml
@@ -45,7 +45,13 @@ jobs:
           export FONT_NAME=AR-PL-KaitiM-Big5
           wget -nv https://raw.githubusercontent.com/chuxinyuan/ARPL/main/${FONT_NAME}.ttf -O ${FONT_NAME}.ttf
           pyftsubset ${FONT_NAME}.ttf --text-file=fonts/chars.txt --no-hinting --flavor=woff2 --output-file=fonts/${FONT_NAME}-cxy.woff2
-          
+          export FONT_NAME=gkai00mp
+          wget -nv https://mirrors.tuna.tsinghua.edu.cn/CTAN/fonts/arphic-ttf/${FONT_NAME}.ttf -O ${FONT_NAME}.ttf
+          pyftsubset ${FONT_NAME}.ttf --text-file=fonts/chars.txt --no-hinting --flavor=woff2 --output-file=fonts/${FONT_NAME}-cxy.woff2
+          export FONT_NAME=bkai00mp
+          wget -nv https://mirrors.tuna.tsinghua.edu.cn/CTAN/fonts/arphic-ttf/${FONT_NAME}.ttf -O ${FONT_NAME}.ttf
+          pyftsubset ${FONT_NAME}.ttf --text-file=fonts/chars.txt --no-hinting --flavor=woff2 --output-file=fonts/${FONT_NAME}-cxy.woff2
+    
       - name: Push fonts
         run: |
           git config user.name github-actions
