--- a/.github/workflows/fonts.yaml
+++ b/.github/workflows/fonts.yaml
@@ -40,7 +40,7 @@ jobs:
           wget -nv https://mirrors.tuna.tsinghua.edu.cn/CTAN/fonts/fandol/${FONT_NAME}.otf
           pyftsubset ${FONT_NAME}.otf --text-file=fonts/chars.txt --no-hinting --flavor=woff2 --output-file=fonts/${FONT_NAME}-cxy.woff2
           export FONT_NAME=gkai00mp
-          wget -nv https://mirrors.pku.edu.cn/ctan/fonts/arphic-ttf/${FONT_NAME}.ttf -O ${FONT_NAME}.ttf
+          wget -nv https://mirrors.tuna.tsinghua.edu.cn/CTAN/fonts/arphic-ttf/${FONT_NAME}.ttf -O ${FONT_NAME}.ttf
           pyftsubset ${FONT_NAME}.ttf --text-file=fonts/chars.txt --no-hinting --flavor=woff2 --output-file=fonts/${FONT_NAME}-cxy.woff2
           export FONT_NAME=bkai00mp
           wget -nv https://mirrors.tuna.tsinghua.edu.cn/CTAN/fonts/arphic-ttf/${FONT_NAME}.ttf -O ${FONT_NAME}.ttf
