--- a/.github/workflows/fonts.yaml
+++ b/.github/workflows/fonts.yaml
@@ -36,6 +36,12 @@ jobs:
           export FONT_NAME=SourceHanSerifCN-Regular
           wget -nv https://github.com/adobe-fonts/source-han-serif/raw/release/SubsetOTF/CN/${FONT_NAME}.otf
           pyftsubset ${FONT_NAME}.otf --text-file=fonts/chars.txt --no-hinting --flavor=woff2 --output-file=fonts/${FONT_NAME}-cxy.woff2
+          export FONT_NAME=SourceHanSansCN-Regular
+          wget -nv https://github.com/adobe-fonts/source-han-serif/raw/release/SubsetOTF/CN/${FONT_NAME}.otf
+          pyftsubset ${FONT_NAME}.otf --text-file=fonts/chars.txt --no-hinting --flavor=woff2 --output-file=fonts/${FONT_NAME}-cxy.woff2          
+          export FONT_NAME=FandolFang-Regular
+          wget -nv https://mirrors.tuna.tsinghua.edu.cn/CTAN/fonts/fandol/${FONT_NAME}.otf
+          pyftsubset ${FONT_NAME}.otf --text-file=fonts/chars.txt --no-hinting --flavor=woff2 --output-file=fonts/${FONT_NAME}-cxy.woff2          
           export FONT_NAME=FandolKai-Regular
           wget -nv https://mirrors.tuna.tsinghua.edu.cn/CTAN/fonts/fandol/${FONT_NAME}.otf
           pyftsubset ${FONT_NAME}.otf --text-file=fonts/chars.txt --no-hinting --flavor=woff2 --output-file=fonts/${FONT_NAME}-cxy.woff2
@@ -45,6 +51,8 @@ jobs:
           export FONT_NAME=bkai00mp
           wget -nv https://mirrors.tuna.tsinghua.edu.cn/CTAN/fonts/arphic-ttf/${FONT_NAME}.ttf -O ${FONT_NAME}.ttf
           pyftsubset ${FONT_NAME}.ttf --text-file=fonts/chars.txt --no-hinting --flavor=woff2 --output-file=fonts/${FONT_NAME}-cxy.woff2
+          
+
 
       - name: Push fonts
         run: |
