--- a/.github/workflows/fonts.yaml
+++ b/.github/workflows/fonts.yaml
@@ -1,4 +1,4 @@
-# create subsets of fonts for my website
+# create subsets of fonts for my website and Shiny app
 name: fonts
 
 on:
@@ -52,8 +52,6 @@ jobs:
           wget -nv https://mirrors.tuna.tsinghua.edu.cn/CTAN/fonts/arphic-ttf/${FONT_NAME}.ttf -O ${FONT_NAME}.ttf
           pyftsubset ${FONT_NAME}.ttf --text-file=fonts/chars.txt --no-hinting --flavor=woff2 --output-file=fonts/${FONT_NAME}-cxy.woff2
           
-
-
       - name: Push fonts
         run: |
           git config user.name github-actions
