--- a/.github/workflows/fonts.yaml
+++ b/.github/workflows/fonts.yaml
@@ -41,7 +41,7 @@ jobs:
           pyftsubset ${FONT_NAME}.otf --text-file=fonts/chars.txt --no-hinting --flavor=woff2 --output-file=fonts/${FONT_NAME}-cxy.woff2
           export FONT_NAME=FangSong_GB2312
           wget -nv https://github.com/chuxinyuan/office-fonts/blob/main/${FONT_NAME}.ttf
-          pyftsubset ${FONT_NAME}.otf --text-file=fonts/chars.txt --no-hinting --flavor=woff2 --output-file=fonts/${FONT_NAME}-cxy.woff2
+          pyftsubset ${FONT_NAME}.ttf --text-file=fonts/chars.txt --no-hinting --flavor=woff2 --output-file=fonts/${FONT_NAME}-cxy.woff2
           export FONT_NAME=FandolFang-Regular
           wget -nv https://mirrors.tuna.tsinghua.edu.cn/CTAN/fonts/fandol/${FONT_NAME}.otf
           pyftsubset ${FONT_NAME}.otf --text-file=fonts/chars.txt --no-hinting --flavor=woff2 --output-file=fonts/${FONT_NAME}-cxy.woff2
