--- a/.github/workflows/fonts.yaml
+++ b/.github/workflows/fonts.yaml
@@ -39,7 +39,7 @@ jobs:
           export FONT_NAME=SourceHanSansCN-Regular
           wget -nv https://github.com/adobe-fonts/source-han-sans/raw/release/SubsetOTF/CN/${FONT_NAME}.otf
           pyftsubset ${FONT_NAME}.otf --text-file=fonts/chars.txt --no-hinting --flavor=woff2 --output-file=fonts/${FONT_NAME}-cxy.woff2
-          export FONT_NAME=FangSong_GB2312
+          export FONT_NAME=FangSong
           wget -nv https://github.com/chuxinyuan/office-fonts/blob/main/${FONT_NAME}.ttf
           pyftsubset ${FONT_NAME}.ttf --text-file=fonts/chars.txt --no-hinting --flavor=woff2 --output-file=fonts/${FONT_NAME}-cxy.woff2
           export FONT_NAME=FandolFang-Regular
